plugins {
    id 'io.quarkus'
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    implementation enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}")
    implementation 'io.quarkus:quarkus-rest'
    implementation 'io.quarkus:quarkus-rest-jackson'
    implementation 'io.quarkus:quarkus-arc'
    implementation fileTree(dir: 'libs', include: ['*.jar'])

    testImplementation 'io.quarkus:quarkus-junit5'
}

group 'su.lasteris'
version '1.0.0.0'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
        vendor = JvmVendorSpec.AMAZON
    }
}

test {
    systemProperty "java.util.logging.manager", "org.jboss.logmanager.LogManager"
}

compileJava {
    options.encoding = 'UTF-8'
    options.compilerArgs.addAll([
            '-parameters',
            '--add-exports', 'java.xml.crypto/com.sun.org.apache.xml.internal.security=ALL-UNNAMED',
            '--add-exports', 'java.xml.crypto/com.sun.org.apache.xml.internal.security.c14n=ALL-UNNAMED'])
}

compileTestJava {
    options.encoding = 'UTF-8'
}

quarkusDev {
    setJvmArgs([
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
            '--add-exports', 'java.xml.crypto/com.sun.org.apache.xml.internal.security=ALL-UNNAMED',
            '--add-exports', 'java.xml.crypto/com.sun.org.apache.xml.internal.security.c14n=ALL-UNNAMED'
    ])
}
